# Connect-Four-cpp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  QLearnAgent.py  README.md  game.h  game.hpp  main.cpp  main.py  minimax.cpp  pyproject.toml  setup.py
alpha_zero/: config.py  evaluate.py  game.py  mcts.py  network.py  play_human.py  self_play.py  train.py  utils.py
python_files/Deep-Q-Net/: DQN.py  Test.py  Train.py  aaa.py
python_files/MCTS/: mcts.py
src/: binder.cpp  game.cpp  game.hpp
